[project @ 2003-10-28 20:10:59 by jvisvanathan] M conf/faces-config.xml     added scroller component, removed ResultSetRenderer.
A src/components/components/ScrollerListener.java
   Handles event queued by DataGrid.

A src/components/model/ResultSetBean.java
  Backing file for DataGrid.

A src/components/components/ScrollerComponent.java
R src/components/renderkit/ResultSetControls.java
   Replaced by ScrollerComponent

R src/components/renderkit/ResultSetRenderer.java
  No longer needed, functiionality provided by DataGrid.

R src/components/taglib/ResultSetTag.java
A src/components/taglib/ScrollerTag.java
    Replaces ResultSetTag.

M src/components/taglib/components.tld
   renamed panel_resultset tag to scrolller tag.
   removed attributes that were used render the results in the table format. This functionality is provided by DataGrid.

M web/index.jsp
   uncommeted result-demo links.
   Replaced the old source links with new ones.
   Updated docs appropriately

M web/result-set.jsp
    added data_table tag. Replaces result-set tag with scroller tag.

Original author: jvisvanathan
Date: 2003-10-28 20:11:10+00:00

git-svn-id: https://svn.java.net/svn/mojarra~svn/trunk@2247 761efcf2-d34d-6b61-9145-99dcacc3edf1